--- a/learning/boot.css
+++ b/learning/boot.css
@@ -9,6 +9,10 @@ button{
     /* width: 3cm; */
     /* height: 1cm; */
 }
-.my{
-    
+/* .bi bi-balloon-heart{ 
+    display:F708; 
+} */
+.myname{
+color: green;
+size: 2cm;
 }
